feat: add distinct Session histories